--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="assets/css/styles.css">
 
-    <title> Hailee's Portfolio </title>
+    <title> Shiya's Portfolio </title>
 </head>
 
 <body>
     <!--=============== HEADER ===============-->
     <header class="header" id="header">
         <nav class="nav container">
-            <a href="#" class="nav__logo">Hailee</a>
+            <a href="#" class="nav__logo">Shiya</a>
 
             <div class="nav__menu">
                 <ul class="nav__list">
@@ -81,7 +81,7 @@
             <div class="home__container container grid">
                 <div class="home__data">
                     <span class="home__greeting">Hello, I'm</span>
-                    <h1 class="home__name">Haliee Keys</h1>
+                    <h1 class="home__name">Shiya Pathania</h1>
                     <h3 class="home__education">Frontend Developer</h3>
 
                     <div class="home__button">
@@ -660,7 +660,7 @@
     <!--=============== FOOTER ===============-->
     <footer class="footer">
         <div class="footer__container container">
-            <h1 class="footer__title">Hailee</h1>
+            <h1 class="footer__title">Shiya</h1>
 
             <ul class="footer__list">
 
@@ -705,7 +705,7 @@
             </ul>
 
             <span class="footer__copy">
-                &#169; 2022 S44WN. All rights reserved.
+                &#169; 2025 Shiya. All rights reserved.
             </span>
         </div>
     </footer>
