--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="c038999353d13b67" />
 
     <!-- Title for SEO -->
     <title>Shiya Pathania - HR & Operations Executive</title>
