--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
       content="Shiya Pathania - Experienced HR & Operations Executive. Explore my portfolio showcasing my skills, projects, and professional achievements."
     />
 
+    <meta
+      name="keywords"
+      content="Shiya Pathania, Shiya, Pathania, DDUGKY, DDU & GKY, HR Executive, HR, Operations, Executive, Portfolio, Resume, Professional Profile, Projects, Skills, Shiya Portfolio"
+    />
+
     <!-- Keywords (optional but helps slightly) -->
     <meta
       name="keywords"
