--- a/index.html
+++ b/index.html
@@ -587,12 +587,15 @@
 
       .about-image img {
         width: 100%;
-        max-width: 400px;
+        max-width: 600px;      
+        max-height: 500px;       
         border-radius: 20px;
         box-shadow: 0 20px 40px rgba(0, 0, 0, 0.15);
         border: 5px solid var(--card-bg);
         animation: pulse 4s infinite;
+        object-fit: cover;       
       }
+
 
       @keyframes pulse {
         0%,
@@ -1424,82 +1427,80 @@
 
     <!-- Hero Section -->
     <section class="hero" id="home">
-      <div class="container">
-        <div class="hero-content">
-          <h1>Shiya Pathania</h1>
-          <h2>HR cum Operation Executive & Web UI Tester</h2>
-          <p>
-            Motivated and detail-oriented HR and Operations professional with
-            experience in training coordination, project support, and team
-            collaboration within the skill development sector. Also skilled in
-            manual web UI testing.
-          </p>
-          <div class="hero-btns">
-            <a href="#contact" class="btn">Get In Touch</a>
-            <a href="#about" class="btn btn-outline">Learn More</a>
-          </div>
-        </div>
-        <div class="hero-image">
-          <img src="./assets/img/shiyaimage.jpg" alt="Shiya Pathania" />
-        </div>
+  <div class="container">
+    <div class="hero-content">
+      <h1>Shiya Pathania</h1>
+      <h2>HR cum Operation Executive & Web UI Tester</h2>
+      <p>
+        Welcome! I’m Shiya Pathania — bridging people, processes, and digital experiences with precision and creativity. Explore my journey in HR Operations, Web UI Testing, and content support.
+      </p>
+      <div class="hero-btns">
+        <a href="#contact" class="btn">Get In Touch</a>
+        <a href="#about" class="btn btn-outline">Learn More</a>
       </div>
+    </div>
+    <div class="hero-image">
+      <img src="./assets/img/shiyaimage.jpg" alt="Shiya Pathania" />
+    </div>
+  </div>
     </section>
+
 
     <!-- About Section -->
     <section id="about">
-      <div class="container">
-        <div class="section-title">
-          <h2>About Me</h2>
-          <p>
-            Get to know more about my background, skills, and professional
-            journey
-          </p>
-        </div>
-        <div class="about-content">
-          <div class="about-text">
-            <h3>HR & Operations Professional with Testing Expertise</h3>
-            <p>
-              Motivated and detail-oriented HR and Operations professional with
-              experience in training coordination, project support, and team
-              collaboration within the skill development sector. Adept at
-              managing day-to-day operations, ensuring compliance with project
-              guidelines, and supporting seamless execution of HR and
-              administrative tasks.
-            </p>
-            <p>
-              I also have hands-on experience in manual web UI testing, having
-              worked on multiple projects to ensure quality and user experience.
-              This unique combination allows me to understand both people
-              processes and product quality.
-            </p>
+  <div class="container">
+    <div class="section-title">
+      <h2>About Me</h2>
+      <p>Discover my professional journey, skills, and contributions.</p>
+    </div>
+    <div class="about-content">
+      <div class="about-text">
+        <h3>HR & Operations Executive | Manual Web UI Tester | Content Writer</h3>
+        <p>
+          I am a multi-skilled professional with experience in HR operations,
+          training coordination, and project support under the DDU-GKY project
+          at <strong>Menrol Skills Pvt. Ltd.</strong> Certified as an <strong>e-SOP Master Trainer</strong>, 
+          I effectively train teams, implement SOPs, and maintain compliance 
+          with <strong>SRLM and MoRD guidelines</strong>.
+        </p>
+        <p>
+          In addition to HR, I have hands-on experience in <strong>manual web UI testing</strong>
+          and content creation, ensuring quality, usability, and clarity across 
+          projects and official communications.
+        </p>
+        <p>
+          This unique blend of <strong>HR expertise, training skills, testing precision, and content support</strong>
+          enables me to bridge people, processes, and digital experiences seamlessly.
+        </p>
 
-            <div class="about-stats">
-              <div class="stat">
-                <i class="fas fa-briefcase"></i>
-                <h4>8+</h4>
-                <p>Months Experience</p>
-              </div>
-              <div class="stat">
-                <i class="fas fa-project-diagram"></i>
-                <h4>5+</h4>
-                <p>Projects Completed</p>
-              </div>
-              <div class="stat">
-                <i class="fas fa-award"></i>
-                <h4>4</h4>
-                <p>Certifications</p>
-              </div>
-            </div>
+        <div class="about-stats">
+          <div class="stat">
+            <i class="fas fa-briefcase"></i>
+            <h4>8+</h4>
+            <p>Months Experience</p>
           </div>
-          <div class="about-image">
-            <img
-              src="https://images.unsplash.com/photo-1580894894513-541e068a3e2b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=600&q=80"
-              alt="About Shiya"
-            />
+          <div class="stat">
+            <i class="fas fa-project-diagram"></i>
+            <h4>5+</h4>
+            <p>Projects Completed</p>
+          </div>
+          <div class="stat">
+            <i class="fas fa-award"></i>
+            <h4>4</h4>
+            <p>Certifications</p>
           </div>
         </div>
       </div>
+      <div class="about-image">
+        <img
+          src="https://images.unsplash.com/photo-1580894894513-541e068a3e2b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=600&q=80"
+          alt="About Shiya"
+        />
+      </div>
+    </div>
+  </div>
     </section>
+
 
     <!-- Skills Section -->
     <section id="skills">
