--- a/index.html
+++ b/index.html
@@ -1653,7 +1653,7 @@
           <p>My manual web UI testing projects and expertise</p>
         </div>
         <div class="testing-container">
-          <div class="testing-card">
+          <!-- <div class="testing-card">
             <img
               src="https://images.unsplash.com/photo-1551650975-87deedd944c3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=600&q=80"
               alt="Hoping Minds Website Testing"
@@ -1671,7 +1671,7 @@
                 <span class="testing-tool">Usability</span>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <div class="testing-card">
             <img
@@ -1693,7 +1693,7 @@
             </div>
           </div>
 
-          <div class="testing-card">
+          <!-- <div class="testing-card">
             <img
               src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=600&q=80"
               alt="Menrol Skills Project Testing"
@@ -1711,7 +1711,7 @@
                 <span class="testing-tool">Regression Testing</span>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
 
         <div style="margin-top: 50px; text-align: center">
